fixed everything on the documentation with swagger and little bugs
